[gd_scene load_steps=7 format=3 uid="uid://biqgfh3vefxmj"]

[ext_resource type="Script" path="res://scenes/game_object/projectile/projectile.gd" id="1_ys1lj"]
[ext_resource type="PackedScene" uid="uid://d14um02htlksm" path="res://scenes/component/velocity_component.tscn" id="2_plbux"]
[ext_resource type="PackedScene" uid="uid://b6ccgjx8qg12h" path="res://scenes/component/hitbox.tscn" id="4_5ovbm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bbner"]
emission_enabled = true
emission = Color(1, 0.945098, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pp8ng"]
radial_segments = 8
rings = 4

[sub_resource type="SphereShape3D" id="SphereShape3D_s6lec"]
radius = 1.0

[node name="Projectile" type="Node3D"]
script = ExtResource("1_ys1lj")

[node name="VelocityComponent" parent="." instance=ExtResource("2_plbux")]
max_speed = 1000

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_bbner")
mesh = SubResource("CapsuleMesh_pp8ng")

[node name="Hitbox" parent="." instance=ExtResource("4_5ovbm")]
damage = 10

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("SphereShape3D_s6lec")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="hit" from="Hitbox" to="." method="_on_hitbox_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
